--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
     </section>
     <section>
         <ul>
-            <small>Courses</small>
-            <h1>Video in Live Action</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae maxime quis iure vel pariatur in illo
-                quaerat numquam dicta impedit esse.</p>
+            <li><small>Courses</small></li>
+            <li><h1>Video in Live Action</h1></li>
+            <li><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae maxime quis iure vel pariatur in illo
+                quaerat numquam dicta impedit esse.</p></li>
         </ul>
         <ul>
             <li><img src="" alt=""></li>
@@ -185,9 +185,104 @@
             <li><button>Learn More</button></li>
         </ul>
     </section>
-    <section></section>
-    <section></section>
-    <footer></footer>
+    <section>
+        <ul>
+            <li><small>Testimonials</small></li>
+            <li>
+                <h1>Our Popular Courses</h1>
+            </li>
+            <li>
+                <p>Problems trying to resolve the conflict between
+                    the two major realms of Classical physics: Newtonian mechanics</p>
+            </li>
+        </ul>
+        <ul>
+            <li><img src="" alt=""></li>
+            <li>
+                <p>Slate helps you see how many more days
+                    you need to work to reach your financial
+                    goal for the month and year.</p>
+            </li>
+            <!-- adding stars laters -->
+
+            <li>
+                <h2>Regina Miles</h2>
+            </li>
+            <li><small>Designer</small></li>
+        </ul>
+        <ul>
+            <li><img src="" alt=""></li>
+            <li>
+                <p>Slate helps you see how many more days
+                    you need to work to reach your financial
+                    goal for the month and year.</p>
+            </li>
+            <!-- adding stars laters -->
+
+            <li>
+                <h2>Regina Miles</h2>
+            </li>
+            <li><small>Designer</small></li>
+        </ul>
+    </section>
+    <section>
+        <ul>
+            <li><small>Newsletter</small></li>
+            <li>
+                <h1>Our Experts Teacher</h1>
+            </li>
+            <li>
+                <p>Problems trying to resolve the conflict between
+                    the two major realms of Classical physics: Newtonian mechanics</p>
+            </li>
+            <li><input type="email" placeholder="Your Email"> <button>Subscribe</button></li>
+        </ul>
+    </section>
+    <footer>
+        <ul>
+            <li><span>Company Info</span></li>
+            <li><small>About Us</small></li>
+            <li><small>Carrier</small></li>
+            <li><small>We are hiring</small></li>
+            <li><small>Blog</small></li>
+        </ul>
+
+        <ul>
+            <li><span>Legal</span></li>
+            <li><small>About Us</small></li>
+            <li><small>Carrier</small></li>
+            <li><small>We are hiring</small></li>
+            <li><small>Blog</small></li>
+        </ul>
+
+        <ul>
+            <li><span>Features</span></li>
+            <li><small>Business Marketing</small></li>
+            <li><small>User Analytic</small></li>
+            <li><small>Live Chat</small></li>
+            <li><small>Unlimited Support</small></li>
+        </ul>
+        <ul>
+            <li><span>Resources</span></li>
+            <li><small> IOS & Android</small></li>
+            <li><small>Watch a Demo</small></li>
+            <li><small>Customers</small></li>
+            <li><small>API</small></li>
+        </ul>
+        <ul>
+            <li><span>Get in touch</span></li>
+            <li><small> (480) 555-0103</small></li>
+            <li><small>4517 Washington Ave. Manchester, Kentucky 39495</small></li>
+            <li><small>debra.holt@example.com</small></li>
+        </ul>
+        <ul>
+            <li><small>Made With Love By Figmaland All Right Reserved</small></li>
+            <!-- <li>
+                 add icon 
+                Facebook / twitter / Insta 
+            </li> -->
+        </ul>
+    </footer>
 
 </body>
 
