--- a/index.html
+++ b/index.html
@@ -11,47 +11,49 @@
 </head>
 
 <body>
-    <header class=header>
-        <nav class=header-nav>
-            <ul class=header-list>
+    <header class="header">
+        <nav class="header-nav">
+            <ul class="header-list header-title">
                 <li>
                     <h1>BrandName</h1>
                 </li>
             </ul>
-            <ul class=header-list>
-                <li class=header-list-name><a href>Home</a></li>
-                <li class=header-list-name><a href>Product</a></li>
-                <li class=header-list-name><a href>Pricing</a></li>
-                <li class=header-list-name><a href>Contact</a></li>
+            <ul class="header-list header-left">
+                <li class=header-list-name><a href="#">Home</a></li>
+                <li class=header-list-name><a href="#">Product</a></li>
+                <li class=header-list-name><a href="#">Pricing</a></li>
+                <li class=header-list-name><a href="#">Contact</a></li>
             </ul>
-            <ul class=header-list>
-                <li class=header-list-name><a href>Login</a></li>
-                <li class=header-list-name><button>Join Us</button></li>
+            <ul class="header-list header-log">
+                <li class=header-list-name><a href="#">Login</a></li>
+                <li class=header-list-name><button class="header-btn">Join Us</button></li>
             </ul>
         </nav>
     </header>
-    <section>
-        <div class>
-            <ul>
+    <section class="online-training-section">
+        <div class="introduction-container">
+            <ul class="introduction-content">
                 <li>
-                    <small>Online Training</small>
+                    <small class="small-info">Online Training</small>
                 </li>
                 <li>
                     <h2>25K+ STUDENTS TRUST US</h2>
                 </li>
-                <li>Our goal is to make online student work for everyone</li>
-                <li><button>Get Quote Now</button></li>
-                <li><button>Learn More</button></li>
+                <li><p> Our goal is to make online education work for everyone</p></li>
+                <li><button class="introduction-btn">Get Quote Now</button> <button class="introduction-btn bg-none">Learn More</button></li>
+
             </ul>
             <ul>
-                <li><img src=./assets/technology1.png alt></li>
+                <li><img class="introduction-img" src=./assets/test.png alt="Une femme "></li>
             </ul>
         </div>
-        <div>
+        <div class="introduction-item">
             <ul>
-                <li><img src=./assets/image5.png alt></li>
+                <li><img src=./assets/computer.png alt></li>
                 <li>
                     <h3>Certified Teacher</h3>
+                    <span class="border-bottom-to-title"></span>
+
                 </li>
                 <li>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptate ducimus magni obcaecati
@@ -59,19 +61,23 @@
                 </li>
             </ul>
             <ul>
-                <li><img src=./assets/image5.png alt></li>
+                <li><img src=./assets/scope.png alt></li>
                 <li>
                     <h3>2,769 online courses</h3>
+                    <span class="border-bottom-to-title"></span>
                 </li>
                 <li>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptate ducimus magni obcaecati
-                        impedit. Accusamus numquam iusto modi assumenda doloribus sit qui</p>
+                        impedit. Accusamus numquam iusto modi assumenda doloribus sit qui Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ullam deserunt voluptates dicta dolores magni optio molestiae omnis incidunt sapiente dignissimos debitis modi quae, porro doloribus architecto nobis, tempore illum?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolorem quam corporis sunt autem, suscipit ratione libero ab eius provident debitis repudiandae expedita nobis nam commodi eligendi alias doloribus assumenda!</p>
                 </li>
             </ul>
             <ul>
-                <li><img src=./assets/image5.png alt></li>
+                <li><img src=./assets/chimie.png alt></li>
                 <li>
                     <h3>Certified Teacher</h3>
+                    <span class="border-bottom-to-title"></span>
+
                 </li>
                 <li>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptate ducimus magni obcaecati
@@ -81,9 +87,11 @@
         </div>
     </section>
     <section class=Approdable-Packages-section>
-        <div>
+        <div class="approdable-container">
             <ul>
-                <li><img src=./assets/product-cover-132sec-.png alt></li>
+                <li><img src=./assets/child.png alt></li>
+                <li><img src=./assets/child.png alt></li>
+                <li><img src=./assets/child.png alt></li>
             </ul>
             <ul>
                 <li>
@@ -94,12 +102,12 @@
                         tempora voluptatibus veniam, vel iste repellat pariatur expedita officiis quidem dicta aperiam
                         numquam aliquam quod. Totam, unde maiores?</p>
                 </li>
-                <li><a href>Learn More</a></li>
+                <li><a href="#">Learn More</a></li>
             </ul>
         </div>
     </section>
     <section class>
-        <div>
+        <div class="approdable-container">
             <ul>
                 <li>
                     <h1>Approdable Packages</h1>
@@ -110,12 +118,12 @@
                         numquam aliquam quod. Totam, unde maiores?</p>
                 </li>
                 <li>
-                    <a href>Learn More</a>
+                    <a href="#">Learn More</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <img src=./assets/product-cover-132sec-.png alt>
+                    <img src=./assets/sales_01.png alt>
                 </li>
             </ul>
         </div>
@@ -139,7 +147,16 @@
         </ul>
         <div class="video-container">
             <ul class="video-content">
-                <li><img src="./assets/image10.png" alt=""></li>
+                <li><img src="./assets/sales_01.png" alt=""></li>
+                <li><small class="small-info">Expert instruction</small></li>
+                <li><h2>Every Client Matters</h2><li>
+                <li><p class="video-paragraph">We focus on ergonomics and meeting you....</p></li>
+                <li><small class="video-sales">15 Sales</small></li>
+                <li><p class="video-price">$16.48 <span>$6.48</span></p></li>
+                <li><button class="video-btn">Learn More</button> </li>
+            </ul>
+            <ul class="video-content">
+                <li><img src="./assets/sales_02.png" alt=""></li>
                 <li><small class="video-small-info">Expert instruction</small></li>
                 <li><h2>Every Client Matters</h2><li>
                 <li><p class="video-paragraph">We focus on ergonomics and meeting you....</p></li>
@@ -148,7 +165,7 @@
                 <li><button class="video-btn">Learn More</button> </li>
             </ul>
             <ul class="video-content">
-                <li><img src="./assets/image10.png" alt=""></li>
+                <li><img src="./assets/sales_03.png" alt=""></li>
                 <li><small class="video-small-info">Expert instruction</small></li>
                 <li><h2>Every Client Matters</h2><li>
                 <li><p class="video-paragraph">We focus on ergonomics and meeting you....</p></li>
@@ -157,16 +174,7 @@
                 <li><button class="video-btn">Learn More</button> </li>
             </ul>
             <ul class="video-content">
-                <li><img src="./assets/image10.png" alt=""></li>
-                <li><small class="video-small-info">Expert instruction</small></li>
-                <li><h2>Every Client Matters</h2><li>
-                <li><p class="video-paragraph">We focus on ergonomics and meeting you....</p></li>
-                <li><small class="video-sales">15 Sales</small></li>
-                <li><p class="video-price">$16.48 <span>$6.48</span></p></li>
-                <li><button class="video-btn">Learn More</button> </li>
-            </ul>
-            <ul class="video-content">
-                <li><img src="./assets/image10.png" alt=""></li>
+                <li><img src="./assets/sales_04.png" alt=""></li>
                 <li><small class="video-small-info">Expert instruction</small></li>
                 <li><h2>Every Client Matters</h2><li>
                 <li><p class="video-paragraph">We focus on ergonomics and meeting you....</p></li>
@@ -191,7 +199,7 @@
             </li>
         </ul>
         <ul>
-            <li><img src="" alt=""></li>
+            <li><img src="./assets/user_01.png" alt=""></li>
             <li>
                 <p>Slate helps you see how many more days
                     you need to work to reach your financial
@@ -203,7 +211,7 @@
             <li><small>Designer</small></li>
         </ul>
         <ul>
-            <li><img src="" alt=""></li>
+            <li><img src="./assets/user_02.png" alt=""></li>
             <li>
                 <p>Slate helps you see how many more days
                     you need to work to reach your financial
