css for desktop finished

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             </ul>
             <ul class="header-list header-left">
                 <li class=header-list-name><a href="#">Home</a></li>
-                <li class=header-list-name><a href="#">Product</a></li>
-                <li class=header-list-name><a href="#">Pricing</a></li>
-                <li class=header-list-name><a href="#">Contact</a></li>
+                <li class=header-list-name><a href="#product">Product</a></li>
+                <li class=header-list-name><a href="#pricing">Pricing</a></li>
+                <li class=header-list-name><a href="#contact">Contact</a></li>
             </ul>
             <ul class="header-list header-log">
                 <li class=header-list-name><a href="#">Login</a></li>
-                <li class=header-list-name><button class="header-btn">Join Us</button></li>
+                <li class=header-list-name><button class="header-btn btn-green">Join Us</button></li>
             </ul>
         </nav>
     </header>
@@ -39,13 +39,14 @@
                 <li>
                     <h2>25K+ STUDENTS TRUST US</h2>
                 </li>
-                <li><p> Our goal is to make online education work for everyone</p></li>
-                <li><button class="introduction-btn">Get Quote Now</button> <button class="introduction-btn bg-none">Learn More</button></li>
+                <li>
+                    <p> Our goal is to make online education work for everyone</p>
+                </li>
+                <li><button class="introduction-btn">Get Quote Now</button> <button
+                        class="introduction-btn bg-none">Learn More</button></li>
 
             </ul>
-            <ul>
-                <li><img class="introduction-img" src=./assets/test.png alt="Une femme "></li>
-            </ul>
+
         </div>
         <div class="introduction-item">
             <ul>
@@ -68,8 +69,13 @@
                 </li>
                 <li>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta voluptate ducimus magni obcaecati
-                        impedit. Accusamus numquam iusto modi assumenda doloribus sit qui Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ullam deserunt voluptates dicta dolores magni optio molestiae omnis incidunt sapiente dignissimos debitis modi quae, porro doloribus architecto nobis, tempore illum?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolorem quam corporis sunt autem, suscipit ratione libero ab eius provident debitis repudiandae expedita nobis nam commodi eligendi alias doloribus assumenda!</p>
+                        impedit. Accusamus numquam iusto modi assumenda doloribus sit qui Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Eaque ullam deserunt voluptates dicta dolores magni optio
+                        molestiae omnis incidunt sapiente dignissimos debitis modi quae, porro doloribus architecto
+                        nobis, tempore illum?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolorem quam corporis sunt
+                        autem, suscipit ratione libero ab eius provident debitis repudiandae expedita nobis nam commodi
+                        eligendi alias doloribus assumenda!</p>
                 </li>
             </ul>
             <ul>
@@ -86,57 +92,14 @@
             </ul>
         </div>
     </section>
-    <section class=Approdable-Packages-section>
-        <div class="approdable-container">
-            <ul>
-                <li><img src=./assets/child.png alt></li>
-                <li><img src=./assets/child.png alt></li>
-                <li><img src=./assets/child.png alt></li>
-            </ul>
-            <ul>
-                <li>
-                    <h1>Approdable Packages</h1>
-                </li>
-                <li>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus iure culpa necessitatibus
-                        tempora voluptatibus veniam, vel iste repellat pariatur expedita officiis quidem dicta aperiam
-                        numquam aliquam quod. Totam, unde maiores?</p>
-                </li>
-                <li><a href="#">Learn More</a></li>
-            </ul>
-        </div>
-    </section>
-    <section class>
-        <div class="approdable-container">
-            <ul>
-                <li>
-                    <h1>Approdable Packages</h1>
-                </li>
-                <li>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus iure culpa necessitatibus
-                        tempora voluptatibus veniam, vel iste repellat pariatur expedita officiis quidem dicta aperiam
-                        numquam aliquam quod. Totam, unde maiores?</p>
-                </li>
-                <li>
-                    <a href="#">Learn More</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <img src=./assets/sales_01.png alt>
-                </li>
-            </ul>
-        </div>
-    </section>
 
-
-
-    <section class="video">
-        <ul>
+    <section class="video" id="product">
+        <ul class="video-content section-content">
             <li>
-                <small>Courses</small>
+                <small class="small-info">Courses</small>
             </li>
             <li>
+                <span class="border-bottom-to-title"></span>
                 <h1>Video in Live Action</h1>
             </li>
             <li>
@@ -149,47 +112,75 @@
             <ul class="video-content">
                 <li><img src="./assets/sales_01.png" alt=""></li>
                 <li><small class="small-info">Expert instruction</small></li>
-                <li><h2>Every Client Matters</h2><li>
-                <li><p class="video-paragraph">We focus on ergonomics and meeting you....</p></li>
+                <li>
+                    <h2>Every Client Matters</h2>
+                <li>
+                <li>
+                    <p class="video-paragraph">We focus on ergonomics and meeting you....</p>
+                </li>
                 <li><small class="video-sales">15 Sales</small></li>
-                <li><p class="video-price">$16.48 <span>$6.48</span></p></li>
-                <li><button class="video-btn">Learn More</button> </li>
+                <li>
+                    <p class="video-price">$16.48 <span>$6.48</span></p>
+                </li>
+                <li><button class="video-btn"><a href="#"> Learn More</button></a> </li>
+
             </ul>
             <ul class="video-content">
                 <li><img src="./assets/sales_02.png" alt=""></li>
-                <li><small class="video-small-info">Expert instruction</small></li>
-                <li><h2>Every Client Matters</h2><li>
-                <li><p class="video-paragraph">We focus on ergonomics and meeting you....</p></li>
+                <li><small class="small-info">Expert instruction</small></li>
+                <li>
+                    <h2>Every Client Matters</h2>
+                <li>
+                <li>
+                    <p class="video-paragraph">We focus on ergonomics and meeting you....</p>
+                </li>
                 <li><small class="video-sales">15 Sales</small></li>
-                <li><p class="video-price">$16.48 <span>$6.48</span></p></li>
-                <li><button class="video-btn">Learn More</button> </li>
+                <li>
+                    <p class="video-price">$16.48 <span>$6.48</span></p>
+                </li>
+                <li><button class="video-btn"><a href="#"> Learn More</button></a> </li>
+
             </ul>
             <ul class="video-content">
                 <li><img src="./assets/sales_03.png" alt=""></li>
-                <li><small class="video-small-info">Expert instruction</small></li>
-                <li><h2>Every Client Matters</h2><li>
-                <li><p class="video-paragraph">We focus on ergonomics and meeting you....</p></li>
+                <li><small class="small-info">Expert instruction</small></li>
+                <li>
+                    <h2>Every Client Matters</h2>
+                <li>
+                <li>
+                    <p class="video-paragraph">We focus on ergonomics and meeting you....</p>
+                </li>
                 <li><small class="video-sales">15 Sales</small></li>
-                <li><p class="video-price">$16.48 <span>$6.48</span></p></li>
-                <li><button class="video-btn">Learn More</button> </li>
+                <li>
+                    <p class="video-price">$16.48 <span>$6.48</span></p>
+                </li>
+                <li><button class="video-btn"><a href="#"> Learn More</button></a> </li>
+
             </ul>
             <ul class="video-content">
                 <li><img src="./assets/sales_04.png" alt=""></li>
-                <li><small class="video-small-info">Expert instruction</small></li>
-                <li><h2>Every Client Matters</h2><li>
-                <li><p class="video-paragraph">We focus on ergonomics and meeting you....</p></li>
+                <li><small class="small-info">Expert instruction</small></li>
+                <li>
+                    <h2>Every Client Matters</h2>
+                <li>
+                <li>
+                    <p class="video-paragraph">We focus on ergonomics and meeting you....</p>
+                </li>
                 <li><small class="video-sales">15 Sales</small></li>
-                <li><p class="video-price">$16.48 <span>$6.48</span></p></li>
-                <li><button class="video-btn">Learn More</button> </li>
+                <li>
+                    <p class="video-price">$16.48 <span>$6.48</span></p>
+                </li>
+                <li><button class="video-btn"><a href="#"> Learn More</button></a> </li>
+
             </ul>
-           
+
         </div>
     </section>
 
 
-    <section>
-        <ul>
-            <li><small>Testimonials</small></li>
+    <section class="testimonials-section" id="pricing">
+        <ul class="testmonials-content section-content">
+            <li><small class="small-info">Testimonials</small></li>
             <li>
                 <h1>Our Popular Courses</h1>
             </li>
@@ -198,45 +189,48 @@
                     the two major realms of Classical physics: Newtonian mechanics</p>
             </li>
         </ul>
-        <ul>
-            <li><img src="./assets/user_01.png" alt=""></li>
-            <li>
-                <p>Slate helps you see how many more days
-                    you need to work to reach your financial
-                    goal for the month and year.</p>
-            </li>
-            <li>
-                <h2>Regina Miles</h2>
-            </li>
-            <li><small>Designer</small></li>
-        </ul>
-        <ul>
-            <li><img src="./assets/user_02.png" alt=""></li>
-            <li>
-                <p>Slate helps you see how many more days
-                    you need to work to reach your financial
-                    goal for the month and year.</p>
-            </li>
-            <li>
-                <h2>Regina Miles</h2>
-            </li>
-            <li><small>Designer</small></li>
-        </ul>
+        <div class="user-testimonials-container">
+            <ul>
+                <li><img src="./assets/user_01.png" alt=""></li>
+                <li>
+                    <p>Slate helps you see how many more days
+                        you need to work to reach your financial
+                        goal for the month and year.</p>
+                </li>
+                <li>
+                    <h2>Regina Miles</h2>
+                </li>
+                <li><small>Designer</small></li>
+            </ul>
+            <ul>
+                <li><img src="./assets/user_02.png" alt=""></li>
+                <li>
+                    <p>Slate helps you see how many more days
+                        you need to work to reach your financial
+                        goal for the month and year.</p>
+                </li>
+                <li>
+                    <h2>Regina Miles</h2>
+                </li>
+                <li><small>Designer</small></li>
+            </ul>
+        </div>
     </section>
-    <section>
+    <section class="newsletter" id="contact">
         <ul>
-            <li><small>Newsletter</small></li>
+            <li><small class="small-info">Newsletter</small></li>
             <li>
                 <h1>Our Experts Teacher</h1>
             </li>
-            <li>
+            <li class="newsletter-paragraphe">
                 <p>Problems trying to resolve the conflict between
                     the two major realms of Classical physics: Newtonian mechanics</p>
             </li>
-            <li><input type=email placeholder=" Your Email"> <button>Subscribe</button></li>
-            </ul>
+            <li class="input"><input class="input-newsletter" type=email placeholder=" Your Email"> <button
+                    class="btn-green btn-brd">Subscribe</button></li>
+        </ul>
     </section>
-    <footer>
+    <footer class="footer-container">
         <ul>
             <li><span>Company Info</span></li>
             <li><small>About Us</small></li>
@@ -270,9 +264,6 @@
             <li><small> (480) 555-0103</small></li>
             <li><small>4517 Washington Ave. Manchester, Kentucky 39495</small></li>
             <li><small>debra.holt@example.com</small></li>
-        </ul>
-        <ul>
-            <li><small>Made With Love By Figmaland All Right Reserved</small></li>
         </ul>
     </footer>
 </body>
